fixes API and categories

--- a/app/views/admin/seminars/show/_general.html.slim
+++ b/app/views/admin/seminars/show/_general.html.slim
@@ -64,3 +64,11 @@
     = render 'admin/seminars/show/reductions'
     = render 'admin/seminars/show/events'
     = render 'admin/seminars/show/categories_panel'
+
+sass:
+  ul.categories
+    li
+      a.archived
+        text-decoration: line-through
+        color: #aaa
+        font-style: italic
