--- a/app/views/admin/seminars/show/_reductions.html.slim
+++ b/app/views/admin/seminars/show/_reductions.html.slim
@@ -5,7 +5,7 @@ table.table.table-condensed
     td = Seminar.human_attribute_name(:pre_booking_weeks)
     td
       = bool_icon(@seminar.early_reducible?)
-      =< "#{@seminar.pre_booking_weeks} Wochen im Vorraus" if @seminar.early_reducible?
+      =< "#{@seminar.pre_booking_weeks} Wochen im Voraus" if @seminar.early_reducible?
   - %i(tandem_reducible pari_reducible group_reducible school_reducible).each do |reducible|
     tr
       td = Seminar.human_attribute_name(reducible)
