--- a/app/views/devise/passwords/edit.html.slim
+++ b/app/views/devise/passwords/edit.html.slim
@@ -1,7 +1,7 @@
 .authform
   = simple_form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :put }) do |f|
     h3 Passwort ändern
-    = devise_error_messages!
+    = render "devise/shared/error_messages", resource: resource
     = f.input :reset_password_token, as: :hidden
     = f.input :password
     = f.input :password_confirmation
