--- a/app/views/devise/registrations/edit.html.slim
+++ b/app/views/devise/registrations/edit.html.slim
@@ -1,7 +1,7 @@
 .authform
   h3 = t('.title')
   = simple_form_for(resource, as: resource_name, url: user_registration_path, html: {method: :patch, role: 'form'}) do |f|
-    = devise_error_messages!
+    = render "devise/shared/error_messages", resource: resource
 
     = f.input :current_password
     = f.input :password, label: t('.new_password')
