--- a/app/views/bookings/_form.html.slim
+++ b/app/views/bookings/_form.html.slim
@@ -58,7 +58,7 @@
                 span.radio
                   label
                     => f.radio_button :reduction, :tandem
-                    | 10% #{t('buchung.reductions.tandem')} (nur für Kurse)
+                    | #{t('buchung.reductions.tandem')} (nur für Kurse)
                 .reduction-content
                   p: small Ich nehme den Rabatt gemeinsam mit folgender Person in Anspruch: (Diese Person muss sich eigenständig anmelden.)
                   .row
