--- a/app/views/booking_mailer/booking_confirmation_email.html.slim
+++ b/app/views/booking_mailer/booking_confirmation_email.html.slim
@@ -29,12 +29,12 @@ p Freundliche Grüße <br> PARITÄTISCHES Bildungswerk <br> (PBW)
 
 .address
   p www.bildungswerk-lsa.de bildungswerk@paritaet-lsa.de
-  p Gemeinütziges Paritätisches Bildungswerk Sachsen-Anhalt - PBW GmbH <br>
+  p Gemeinnütziges Paritätisches Bildungswerk Sachsen-Anhalt - PBW GmbH <br>
     Wiener Str. 2 <br>
     39112 Magdeburg
 
-  p Tel. 0391/6293-311 <br>
-    Fax. 0391/6293-555
+  p Tel. 0391/6293 314 <br>
+    Fax. 0391/6293 596314
 
   p Geschäftsführerin Silke Mertens <br>
     Amtsgericht Stendal HRB 25936 <br>
