--- a/app/views/booking_mailer/booking_confirmation_email.text.erb
+++ b/app/views/booking_mailer/booking_confirmation_email.text.erb
@@ -16,13 +16,13 @@ PARITÄTISCHES Bildungswerk
 
 www.bildungswerk-lsa.de bildungswerk@paritaet-lsa.de
 
-Gemeinütziges Paritätisches Bildungswerk Sachsen-Anhalt - PBW GmbH
+Gemeinnütziges Paritätisches Bildungswerk Sachsen-Anhalt - PBW GmbH
 Wiener Str. 2
 39112 Magdeburg
 
 
-Tel. 0391/6293-311
-Fax. 0391/6293-555
+Tel. 0391/6293 314
+Fax. 0391/6293 596314
 
 Geschäftsführerin Silke Mertens
 Amtsgericht Stendal HRB 25936
