--- a/app/views/bookings/_form.html.slim
+++ b/app/views/bookings/_form.html.slim
@@ -44,8 +44,7 @@
           legend Ich möchte folgenden Rabatt in Anspruch nehmen:
           small Es kann nur ein Rabatt pro Teilnehmer*in in Anspruch genommen werden.
           br
-          small Weitere Informationen zu unseren Rabatten finden Sie im Bildungskalender 2019 auf Seite 12
-            oder #{link_to 'hier', main_app.reductions_path}.
+          small Weitere Informationen zu unseren Rabatten finden Sie im Bildungskalender.
           .form-group.radio_buttons
             .control_group
               input type="hidden" name="booking[reduction]" value=""
