fix email sending

--- a/app/views/booking_mailer/booking_notification_email.text.erb
+++ b/app/views/booking_mailer/booking_notification_email.text.erb
@@ -24,7 +24,7 @@ Arbeitgeber:
 <% end %>
 
 Rabatt
-<%= I18n.t('buchung.reductions')[@booking.reduction.to_sym] %>
+<%= I18n.t('buchung.reductions')[@booking.reduction.to_sym] if @booking.reduction.present? %>
 
 Bemerkungen:
 <%= @booking.comments %>
