--- a/app/views/booking_mailer/booking_notification_email.html.slim
+++ b/app/views/booking_mailer/booking_notification_email.html.slim
@@ -39,7 +39,7 @@ table
   tr
     td: strong Rabatt
     td
-      = I18n.t('buchung.reductions')[@booking.reduction.to_sym]
+      = I18n.t('buchung.reductions')[@booking.reduction.to_sym] if @booking.reduction.present?
 
   tr
     td: strong Bemerkungen
