--- a/app/views/admin/companies/index.html.slim
+++ b/app/views/admin/companies/index.html.slim
@@ -24,5 +24,5 @@
           td = lines_for [company.street, "#{company.zip} #{company.city}", company.city_part]
           td = lines_for [company.phone, company.mobile, company.fax]
           td = link_to(company.email, 'mailto:' + company.email) if company.email.present?
-          td = company.attendees.booked.count
+          td = company.attendees_count
           td = ldate company.created_at.to_date
